--- a/GRACE/Waiting for Lift/WaitingLift.storyboard
+++ b/GRACE/Waiting for Lift/WaitingLift.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="iiq-iD-Ntz">
-                                <rect key="frame" x="162" y="257" width="90.5" height="208.5"/>
+                                <rect key="frame" x="162" y="344" width="90.5" height="208.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="antenna.radiowaves.left.and.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QGy-IG-PTI">
                                         <rect key="frame" x="0.0" y="4" width="90.5" height="63"/>
@@ -34,76 +34,76 @@
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have chosen" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFD-Ls-ckd">
-                                <rect key="frame" x="20" y="64" width="233" height="38.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level ___" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6i-s9-G1H">
-                                <rect key="frame" x="20" y="122.5" width="234" height="64.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="54"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="vaV-gp-OfX">
+                                <rect key="frame" x="20" y="64" width="374" height="148"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You chose" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFD-Ls-ckd">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="38.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level ___" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6i-s9-G1H">
+                                        <rect key="frame" x="0.0" y="46.5" width="374" height="64.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="54"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76K-aR-fu5">
+                                        <rect key="frame" x="0.0" y="119" width="374" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place your device near the lift panel." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc1-px-oOj">
-                                <rect key="frame" x="20" y="515.5" width="374" height="76.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <rect key="frame" x="20" y="695.5" width="374" height="62.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cancel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3v-vh-bwI">
-                                <rect key="frame" x="159" y="792" width="96.5" height="40"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <color key="textColor" name="Red"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" alpha="0.10000000000000001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D8p-ch-cY2">
-                                <rect key="frame" x="20" y="782" width="374" height="60"/>
-                                <color key="backgroundColor" name="Red"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <state key="normal">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D8p-ch-cY2">
+                                <rect key="frame" x="20" y="778" width="374" height="64"/>
+                                <color key="backgroundColor" name="Almond"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="JBM-Za-AnS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Cancel">
                                     <color key="titleColor" name="Red"/>
                                 </state>
                                 <connections>
                                     <action selector="cancelAlert:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="hmQ-pq-P5G"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76K-aR-fu5">
-                                <rect key="frame" x="20" y="207" width="89" height="29"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="iiq-iD-Ntz" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="1WB-OW-chw"/>
+                            <constraint firstItem="iiq-iD-Ntz" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="1jO-gA-OLo"/>
+                            <constraint firstItem="vaV-gp-OfX" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="7iY-Mc-7Yb"/>
                             <constraint firstAttribute="trailing" secondItem="Gc1-px-oOj" secondAttribute="trailing" constant="20" id="Bxe-8V-B8t"/>
-                            <constraint firstItem="U6i-s9-G1H" firstAttribute="top" secondItem="iFD-Ls-ckd" secondAttribute="bottom" constant="20" id="CKU-tB-Epe"/>
-                            <constraint firstItem="D3v-vh-bwI" firstAttribute="top" secondItem="D8p-ch-cY2" secondAttribute="top" constant="10" id="N5x-8m-OX5"/>
-                            <constraint firstItem="D3v-vh-bwI" firstAttribute="centerY" secondItem="D8p-ch-cY2" secondAttribute="centerY" id="O9o-aN-1TC"/>
+                            <constraint firstItem="D8p-ch-cY2" firstAttribute="top" secondItem="Gc1-px-oOj" secondAttribute="bottom" constant="20" id="ClQ-Ez-M8G"/>
+                            <constraint firstItem="vaV-gp-OfX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="FNy-V4-utp"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="D8p-ch-cY2" secondAttribute="bottom" constant="20" id="VbA-fB-VRK"/>
-                            <constraint firstItem="D3v-vh-bwI" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Y56-al-pBa"/>
-                            <constraint firstItem="Gc1-px-oOj" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="YGU-XH-SLd"/>
-                            <constraint firstItem="76K-aR-fu5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="bA1-xe-ZBE"/>
-                            <constraint firstItem="Gc1-px-oOj" firstAttribute="top" secondItem="iiq-iD-Ntz" secondAttribute="bottom" constant="50" id="fEB-u2-eJY"/>
+                            <constraint firstItem="iiq-iD-Ntz" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="fzW-2R-wFc"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vaV-gp-OfX" secondAttribute="trailing" constant="20" id="g9f-BU-SMf"/>
                             <constraint firstItem="Gc1-px-oOj" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="20" id="hzQ-kR-xMt"/>
                             <constraint firstItem="D8p-ch-cY2" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="oaB-Z5-lGf"/>
-                            <constraint firstItem="iFD-Ls-ckd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="qe6-lI-oLj"/>
-                            <constraint firstItem="iiq-iD-Ntz" firstAttribute="top" secondItem="76K-aR-fu5" secondAttribute="bottom" constant="21" id="reZ-xY-eLg"/>
-                            <constraint firstItem="iFD-Ls-ckd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="reh-Jh-gbF"/>
-                            <constraint firstItem="U6i-s9-G1H" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="rna-yH-AQo"/>
                             <constraint firstItem="D8p-ch-cY2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="rv8-tP-Q6p"/>
-                            <constraint firstItem="76K-aR-fu5" firstAttribute="top" secondItem="U6i-s9-G1H" secondAttribute="bottom" constant="20" id="zAZ-YL-mH6"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="cancelBtn" destination="D8p-ch-cY2" id="vAq-Vh-i17"/>
+                        <outlet property="antennaIcon" destination="QGy-IG-PTI" id="VPn-Fy-bQJ"/>
+                        <outlet property="cancelButton" destination="D8p-ch-cY2" id="vAq-Vh-i17"/>
+                        <outlet property="descriptionLabel" destination="Gc1-px-oOj" id="a8P-Zl-wsv"/>
+                        <outlet property="headerView" destination="vaV-gp-OfX" id="saI-88-d8p"/>
                         <outlet property="levelLabel" destination="U6i-s9-G1H" id="YnL-dS-KGC"/>
                         <outlet property="locationLabel" destination="76K-aR-fu5" id="X3a-VL-DGJ"/>
                         <outlet property="phoneIcon" destination="gCS-Gt-5EW" id="ADO-yJ-LkK"/>
+                        <outlet property="titleLabel" destination="iFD-Ls-ckd" id="4Wm-3J-oRn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -114,6 +114,9 @@
     <resources>
         <image name="antenna.radiowaves.left.and.right" catalog="system" width="128" height="109"/>
         <image name="iphone" catalog="system" width="108" height="128"/>
+        <namedColor name="Almond">
+            <color red="0.90588235294117647" green="0.84313725490196079" blue="0.75686274509803919" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Red">
             <color red="0.74901960784313726" green="0.2627450980392157" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
